tests/invalid/test_060.wyal
define NatArray(int[] xs) is:
   forall (int i):
     (i < |xs|) ==> (xs[i] >= 0)

define PosArray(int[] xs) is:
   forall (int i):
     (i < |xs|) ==> (xs[i] > 0)

assert:
   forall (int[] xs):
       NatArray(xs) ==> PosArray(xs)